--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("../images/back.jpg");
+  background-image: url("../images/dice.jpg");
 }
 .jumbotron{
   background-image: url("../images/formbg.jpg");
@@ -14,6 +14,7 @@ h1{
 }
 #gameDisplayPlayer1{
   float: left;
+  color: white;
 }
 #gameDisplayPlayer2{
   float: right;
