Added style to labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,7 @@ placeholder{
   color: rgb(245, 245, 252);
   font-family: Arial, Helvetica, sans-serif;
 }
+.playerName2{
+  color: rgb(245, 245, 252);
+  font-family: Arial, Helvetica, sans-serif;
+}
